<resources>
    <string name="app_name">SQLiteWithFragment</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_unit_price">Unit Price</string>
    <string name="btn_add_product">Add Product</string>
    <string name="btn_show_add_product">Add</string>
    <string name="btn_show_all_products">Show</string>
    <string name="btn_search">Search</string>
    <string name="hint_search_product">Search</string>
</resources>