<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding">

    <EditText
        android:hint="@string/hint_product_name"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/hint_category"
        android:id="@+id/et_category"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/hint_unit_price"
        android:inputType="numberDecimal"
        android:id="@+id/et_price"
        app:layout_constraintTop_toBottomOf="@id/et_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_add_product"
        android:text="@string/btn_add_product"
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>