<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/common_padding"
    tools:context=".MainActivity">

    <Button
        android:layout_marginStart="@dimen/common_margin"
        android:id="@+id/btn_add_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/btn_show_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/btn_show_all_products"
        android:layout_marginStart="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_product"
        android:id="@+id/btn_show_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <Button

        android:layout_marginHorizontal="@dimen/common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/btn_search"
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        android:layout_marginHorizontal="@dimen/common_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_search_product"
        android:id="@+id/et_search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <FrameLayout
        android:id="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintBottom_toTopOf="@id/btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>